--- a/grid-style.css
+++ b/grid-style.css
@@ -39,15 +39,28 @@ body {
   /* grid-template-rows: 700px 600px 820px 240px 1026px; */
 }
 
-.find-story {
+.find-story .container{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 160px 1fr 1fr;
   grid-template-rows: 2fr 1fr 1fr;
+  justify-items: start;
+  align-items: center;
 }
-
-.find-story img {
-  grid-column: 2/3;
+.find-story .container::before {
+  content: "";
+  grid-column: 1/2;
   grid-row: 1/-1;
+}
+.find-story img {
+  grid-column: -2/-1;
+  grid-row: 1/-1;
+}
+.find-story h2 {
+  align-self: end;
+  margin: 0;
+}
+.find-story a {
+  align-self: start;
 }
 
 .about {
