--- a/basic.css
+++ b/basic.css
@@ -77,22 +77,28 @@ body {
   color: var(--color-white);
   background-color: var(--color-orange);
   text-transform: uppercase;
+  border: 1px solid var(--color-orange);
   border-radius: 5px;
-  padding: 19px 24px;
+  padding: 18px 24px;
 }
 
 .about {
   background-color: var(--color-grey);
 }
 .about h2 {
+  margin: 0;
+  font-weight: 400;
   font-size: 32px;
   line-height: 45px;
 }
 .about a {
+  font-size: 18px;
+  line-height: 22px;
   color: var(--color-orange);
   background-color: var(--color-white);
   border: 1px solid var(--color-orange);
   border-radius: 5px;
+  padding: 18px 24px;
 }
 
 .last-stories {
