--- a/basic.css
+++ b/basic.css
@@ -28,9 +28,13 @@
 :root {
   --color-black: #000;
   --color-white: #fff;
-  --color-orange: #F7941E;
-  --color-grey: #F1F1F2;
-  --color-grey-2: #FAFAFA;
+  --color-orange: #D5B199;
+  --color-grey: #FFFFEE;
+  --color-grey-2: #f5f5f5;
+  --color-hover: #9C7168;
+  --color-on-site: #FDAD54;
+  --color-team: #AEBA92;
+  --color-on-site-pail: #FDBF79;
 }
 
 a {
@@ -74,7 +78,7 @@ body {
 .find-story a {
   font-size: 18px;
   line-height: 22px;
-  color: var(--color-white);
+  color: var(--color-grey);
   background-color: var(--color-orange);
   text-transform: uppercase;
   border: 1px solid var(--color-orange);
@@ -95,7 +99,7 @@ body {
   font-size: 18px;
   line-height: 22px;
   color: var(--color-orange);
-  background-color: var(--color-white);
+  background-color: var(--color-grey);
   border: 1px solid var(--color-orange);
   border-radius: 5px;
   padding: 18px 24px;
@@ -212,4 +216,55 @@ footer {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+}
+
+.main-menu a:hover {
+  color: var(--color-hover);
+}
+
+.main-menu a:hover,
+.stories-list a:hover {
+  color: var(--color-hover);
+}
+
+.current {
+  color: var(--color-on-site) !important;
+}
+
+.main-menu a:active {
+  color: var(--color-orange);
+}
+
+.stories-list a:active {
+  color: var(--color-orange) !important;
+}
+
+.best-stories ul {
+  list-style: none;
+}
+
+.find-story a:hover {
+  background-color: var(--color-on-site);
+  border-color: var(--color-on-site);
+}
+
+.find-story a:active {
+  background-color: var(--color-on-site-pail);
+  border-color: var(--color-on-site-pail);
+}
+
+.about a:hover,
+.new-history:hover {
+  color: var(--color-on-site);
+  border-color: var(--color-on-site);
+}
+
+.about a:active,
+.new-history:active {
+  color: var(--color-on-site-pail);
+  border-color: var(--color-on-site-pail);
+}
+
+.stories-list a:hover {
+  color: var(--color-hover);
 }
