--- a/grid-style.css
+++ b/grid-style.css
@@ -146,7 +146,9 @@ body {
 .best-stories {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 250px 1fr;
+  grid-template-rows: 150px;
+  justify-items: center;
+  align-items: center;
 }
 
 .best-stories ul {
@@ -155,15 +157,36 @@ body {
   grid-template-rows: repeat(2, 1fr);
 }
 
-.best-stories ul li:first-of-type {
+.with-picture {
+  column-gap: 60px;
   grid-row: 1/2;
   grid-column: 1/-1;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 2fr 1fr;
+  height: 370px;
+  width: 1170px;
+  margin-left: 135px;
 }
 
-.best-stories ul li:first-of-type img {
-  grid-template-columns: 1/2;
+.with-picture p {
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+
+.with-picture h3 {
+  grid-row: 2/3;
+  grid-column: 2/4;
+}
+
+.with-picture a {
+  grid-row: 3/4;
+  grid-column: 2/3;
+}
+
+.with-picture img {
+  grid-columns: 1/2;
+  grid-row: 1/-1;
 }
 
 .main-footer {
