--- a/basic.css
+++ b/basic.css
@@ -30,6 +30,7 @@
   --color-white: #fff;
   --color-orange: #D5B199;
   --color-grey: #FFFFEE;
+  --color-grey-light: #FAFAFA;
   --color-grey-2: #f1f1f1;
   --color-hover: #9C7168;
   --color-on-site: #FDAD54;
@@ -123,7 +124,10 @@ body {
   list-style: none;
 }
 .stories-list li {
-  background-color: var(--color-grey-2);
+  background-color: var(--color-grey-light);
+}
+.stories-list li:hover {
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 .stories-list h3 {
   padding-left: 20px;
@@ -155,52 +159,41 @@ body {
 
 .best-stories {
   background-color: var(--color-white);
-
 }
 .best-stories h2 {
+  font-weight: 400;
   font-size: 32px;
   line-height: 38px;
 }
-.best-stories h3 {
+
+.best-item:hover {
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+}
+.best-item h3 {
+  font-weight: 700;
   font-size: 24px;
   line-height: 34px;
 }
-.best-stories a {
+.best-item a {
   font-size: 14px;
   line-height: 20px;
   color: var(--color-black);
 }
 
-.with-picture{
+.best-item--picture {
   background-color: var(--color-black);
   color: var(--color-white);
 }
-.with-picture h3 {
+.best-item--picture h3 {
+  font-weight: 400;
   font-size: 48px;
   line-height: 58px;
 }
-.with-picture a {
+.best-item--picture a {
   color: var(--color-white);
 }
-
-.with-picture p {
+.best-item--picture p {
   color: var(--color-team);
-}
-
-.no-picture {
-  display: grid;
-  grid-template-rows: 100px  150px 40px;
-  width: 570px;
-  height: 290px;
-  margin-left: 135px;
-}
-
-.no-picture-2 {
-  grid-template-rows: 100px  150px 40px;
-  display: grid;
-  width: 570px;
-  height: 290px;
-  margin-left: 30px;
 }
 
 footer {
@@ -301,8 +294,4 @@ footer {
 
 .best-stories a:active {
   color: var(--color-orange);
-}
-
-.last-stories img {
-  pading-left: 10px;
 }
